--- a/FPT_Books_Store/Views/Home/Index.cshtml
+++ b/FPT_Books_Store/Views/Home/Index.cshtml
@@ -1,8 +1,39 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+@model IEnumerable<FPT_Books_Store.Models.Book>
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<form asp-controller="Home" asp-action="Search" method="get">
+    <div class="input-group">
+        <input type="text" class="form-control" name="searchTerm">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">Tìm kiếm</button>
+        </div>
+    </div>
+</form>
+
+
+<div class="container d-flex justify-content-center mt-100">
+    <div class="row">
+        @foreach (var item in Model)
+        {
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img">
+                        <a href="#" data-abc="true">
+                            <img src="~/Image/@item.ImgFileName" alt="Image">
+                        </a>
+                        <span class="text-center"><i class="fa fa-rupee"></i> @item.Price</span>
+                        <div class="product-action">
+                            <div class="product-action-style">
+                                <a href="#"> <i class="fa fa-plus"></i> </a>
+                                <a href="#"> <i class="fa fa-heart"></i> </a>
+                                <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        }
+    </div>
 </div>
