--- a/DemoIdentity/Views/RoleManager/Index.cshtml
+++ b/DemoIdentity/Views/RoleManager/Index.cshtml
@@ -3,6 +3,7 @@
     ViewData["Title"] = "Role Manager";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+
 <h1>Role Manager</h1>
 <form method="post" asp-action="AddRole" asp-controller="RoleManager">
     <div class="input-group">
@@ -29,3 +30,7 @@
         }
     </tbody>
 </table>
+
+<td>
+    <a class="btn btn-primary" asp-controller="UserRoles">User Roles</a>
+</td>
