--- a/DemoIdentity/Views/Books/Create.cshtml
+++ b/DemoIdentity/Views/Books/Create.cshtml
@@ -10,7 +10,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form asp-action="Create">
+        <form asp-action="Create" enctype="multipart/form-data" method="post">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Name" class="control-label"></label>
@@ -46,13 +46,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="ImgFileName" class="control-label"></label>
-                <input asp-for="ImgFileName" class="form-control" />
+                <input name="file" type="file" accept="image/*" />
                 <span asp-validation-for="ImgFileName" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ImgFileExt" class="control-label"></label>
-                <input asp-for="ImgFileExt" class="form-control" />
-                <span asp-validation-for="ImgFileExt" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
