--- a/DemoIdentity/Views/Books/Index.cshtml
+++ b/DemoIdentity/Views/Books/Index.cshtml
@@ -8,6 +8,9 @@
 
 <p>
     <a asp-action="Create">Create New</a>
+    <a asp-controller="Authors">Authors New</a>
+    <a asp-controller="Categories">Categories New</a>
+    <a asp-controller="PublishingCompanies">PublishingCompanies New</a>
 </p>
 <table class="table">
     <thead>
@@ -36,9 +39,6 @@
             <th>
                 @Html.DisplayNameFor(model => model.ImgFileName)
             </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImgFileExt)
-            </th>
             <th></th>
         </tr>
     </thead>
@@ -49,16 +49,16 @@
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Category.Id)
+                @Html.DisplayFor(modelItem => item.Category.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Price)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Author.Id)
+                    @Html.DisplayFor(modelItem => item.Author.Name)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.PublishingCompany.Id)
+                    @Html.DisplayFor(modelItem => item.PublishingCompany.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Quantity)
@@ -67,10 +67,7 @@
                 @Html.DisplayFor(modelItem => item.Description)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.ImgFileName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.ImgFileExt)
+                    <img src="~/Image/@item.ImgFileName" alt="Image" style="width: 100px; high: 100px">
             </td>
             <td>
                 <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
