up name FPTBookStore

--- a/DemoIdentity/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
+++ b/DemoIdentity/Areas/Identity/Pages/Account/Manage/_ManageNav.cshtml
@@ -1,4 +1,4 @@
-﻿@using DemoIdentity.Models;
+﻿@using FPTBookStore.Models;
 @inject SignInManager<ApplicationUser> SignInManager
 @{
     var hasExternalLogins = (await SignInManager.GetExternalAuthenticationSchemesAsync()).Any();
