--- a/DemoIdentity/Views/PublishingCompanies/Index.cshtml
+++ b/DemoIdentity/Views/PublishingCompanies/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<BookCan.Models.PublishingCompany>
+﻿@model IEnumerable<FPTBook.Models.PublishingCompany>
 
 @{
     ViewData["Title"] = "Index";
