--- a/DemoIdentity/Views/Shared/_Layout.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout.cshtml
@@ -32,8 +32,15 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
                         </li>  
                         }
-              
-                        else{}
+                      @if (User.IsInRole("Admin"))
+                        {
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
+                            </li>
+
+                        }
+
+                        else { }
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
