--- a/DemoIdentity/Views/_ViewImports.cshtml
+++ b/DemoIdentity/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using DemoIdentity
-@using DemoIdentity.Models
+﻿@using FPTBookStore
+@using FPTBookStore.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
