--- a/DemoIdentity/Views/UserRoles/Index.cshtml
+++ b/DemoIdentity/Views/UserRoles/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using DemoIdentity.Models
-@model List<DemoIdentity.Models.UserRolesViewModel>
+﻿@using FPTBookStore.Models
+@model List<FPTBookStore.Models.UserRolesViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
