--- a/DemoIdentity/Views/Books/Details.cshtml
+++ b/DemoIdentity/Views/Books/Details.cshtml
@@ -20,7 +20,7 @@
             @Html.DisplayNameFor(model => model.Category)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Category.Id)
+            @Html.DisplayFor(model => model.Category.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Price)
@@ -32,13 +32,13 @@
             @Html.DisplayNameFor(model => model.Author)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Author.Id)
+            @Html.DisplayFor(model => model.Author.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.PublishingCompany)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.PublishingCompany.Id)
+            @Html.DisplayFor(model => model.PublishingCompany.Name)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Quantity)
@@ -52,21 +52,23 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Description)
         </dd>
-        <dt class = "col-sm-2">
+        <dt class="col-sm-2">
             @Html.DisplayNameFor(model => model.ImgFileName)
         </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgFileName)
+        <dd class="col-sm-10">
+            <img src="~/Image/@Model.ImgFileName" alt="Image" style="width: 100px; height: 100px" />
         </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.ImgFileExt)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.ImgFileExt)
-        </dd>
+
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    @if (User.IsInRole("Owner"))
+     {
+    <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> 
+        <a asp-action="Index">Back to List</a>
+    }
+    else
+    {
+        
+    }
 </div>
