--- a/DemoIdentity/Views/Home/Index.cshtml
+++ b/DemoIdentity/Views/Home/Index.cshtml
@@ -1,75 +1,41 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
-@model IEnumerable<BookCan.Models.Book>
-
-
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+@model IEnumerable<FPTBook.Models.Book>
 
 <h1>Hello tinh</h1>
 
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.Name)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Category)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Price)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Author)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.PublishingCompany)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Quantity)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.ImgFileName)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
+<form asp-controller="Home" asp-action="Search" method="get">
+    <div class="input-group">
+        <input type="text" class="form-control" name="searchTerm" placeholder="Tìm kiếm sách...">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">Tìm kiếm</button>
+        </div>
+    </div>
+</form>
+
+
+<div class="container d-flex justify-content-center mt-100">
+    <div class="row">
         @foreach (var item in Model)
         {
-            <tr>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Category.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Price)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Author.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.PublishingCompany.Name)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Quantity)
-                </td>
-                <td>
-                    @Html.DisplayFor(modelItem => item.Description)
-                </td>
-                <td>
-                    <img src="~/Image/@item.ImgFileName" alt="Image" style="width: 100px; high: 100px">
-                </td>
-            </tr>
+            <div class="col-md-3">
+                <div class="product-wrapper mb-45 text-center">
+                    <div class="product-img">
+                        <a href="#" data-abc="true">
+                            <img src="~/Image/@item.ImgFileName" alt="Image" style="width: 250px; height: 350px">
+                        </a>
+                        <span class="text-center"><i class="fa fa-rupee"></i> @item.Price</span>
+                        <div class="product-action">
+                            <div class="product-action-style">
+                                <a href="#"> <i class="fa fa-plus"></i> </a>
+                                <a asp-controller="Books" asp-action="Details" asp-route-id="@item.Id"><i class="fa fa-heart"></i></a>
+                                <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         }
-    </tbody>
-</table>
+    </div>
+</div>
