--- a/DemoIdentity/Views/Shared/_Layout.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout.cshtml
@@ -7,6 +7,10 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/DemoIdentity.styles.css" asp-append-version="true" />
+    <link rel="stylesheet" type="text/css" href="~/css/homepage.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+
+
 </head>
 <body>
     <header>
@@ -32,7 +36,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
                         </li>  
                         }
-                      @if (User.IsInRole("Admin"))
+                      @if (User.IsInRole("Owner"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
