--- a/DemoIdentity/Views/Books/Details.cshtml
+++ b/DemoIdentity/Views/Books/Details.cshtml
@@ -60,6 +60,13 @@
         </dd>
 
     </dl>
+    <form asp-action="AddTicket" method="post">
+        <input type="hidden" name="id" value="@Model.Id" />
+        <input type="hidden" name="name" value="@Model.Name" />
+        <input type="hidden" name="price" value="@Model.Price" />
+        <input type="number" name="quantity" min=1 value=1 />
+        <input type="submit" value="Add To Cart" class="btn btn-primary" />
+    </form>
 </div>
 <div>
     @if (User.IsInRole("Owner"))
