--- a/DemoIdentity/Views/Shared/_Layout.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout.cshtml
@@ -45,6 +45,9 @@
                         }
 
                         else { }
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="CheckOut">CheckOut</a>
+                        </li>
                     </ul>
                     <partial name="_LoginPartial" />
                 </div>
