--- a/DemoIdentity/Views/Home/Index.cshtml
+++ b/DemoIdentity/Views/Home/Index.cshtml
@@ -58,16 +58,21 @@
                             </div>
                             <div class="d-flex border-top">
                                 <small class="w-50 text-center border-end py-2">
-                                    <a class="text-body" href=""><i class="fa fa-eye text-primary me-2"></i>View detail</a>
+                                        <a class="text-body" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id"><i class="fa fa-eye text-primary me-2"></i>View detail</a>
                                 </small>
                                 <small class="w-50 text-center py-2">
-                                    <a class="text-body" href=""><i class="fa fa-shopping-bag text-primary me-2"></i>Add to cart</a>
+                                        <form asp-controller="Books"  asp-action="Apptocart" method="post" >
+                                            <input type="hidden" name="id" value="@book.Id" />
+                                            <input type="hidden" name="name" value="@book.Name" />
+                                            <input type="hidden" name="price" value="@book.Price" />
+                                            <input type="hidden" name="quantity"  value=1 />
+                                            <a class="text-body" href=""><i class="fa fa-shopping-bag text-primary me-2"></i>Add to cart</a>
+                                        </form>
                                 </small>
                             </div>
                         </div>
                     </div>
                     }
-
                 </div>
             </div>
             <div id="tab-2" class="tab-pane fade show p-0">
