--- a/DemoIdentity/Views/Home/Search.cshtml
+++ b/DemoIdentity/Views/Home/Search.cshtml
@@ -4,33 +4,51 @@
     ViewData["Title"] = "Search Results";
 }
 
+<form asp-controller="Home" asp-action="Search" method="get">
+    <div class="input-group">
+        <input type="text" class="form-control" name="searchTerm" placeholder="searchTerm">
+        <div class="input-group-append">
+            <button class="btn btn-primary" type="submit">SearchTerm</button>
+        </div>
+    </div>
+</form>
 <div class="text-center">
     <h1 class="display-4">Search Results</h1>
 </div>
 
-<div class="container d-flex justify-content-center mt-100">
-    <div class="row">
-        
-            @foreach (var book in Model)
-            {
-                <div class="col-md-3">
-                    <div class="product-wrapper mb-45 text-center">
-                        <div class="product-img">
-                            <a asp-action="Details" asp-route-id="@book.Id" data-abc="true">
-                                <img src="~/Image/@book.ImgFileName" alt="Image" style="width: 250px; height: 350px;">
-                            </a>
-                            <span class="text-center"><i class="fa fa-rupee"></i> @book.Price</span>
-                            <div class="product-action">
-                                <div class="product-action-style">
-                                    <a href="#"> <i class="fa fa-plus"></i> </a>
-                                    <a href="#"> <i class="fa fa-heart"></i> </a>
-                                    <a href="#"> <i class="fa fa-shopping-cart"></i> </a>
-                                </div>
-                            </div>
-                        </div>
+<div id="tab-1" class="tab-pane fade show p-0 active">
+    <div class="row g-4">
+
+        @foreach (var book in Model)
+        {
+            <div class="col-xl-3 col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
+                <div class="product-item">
+                    <div class="position-relative bg-light overflow-hidden">
+                        <img class="img-fluid w-100" src="~/Image/@book.ImgFileName" style="width: 200px; height: 300px" alt="">
+                        <div class="bg-secondary rounded text-white position-absolute start-0 top-0 m-4 py-1 px-3">New</div>
                     </div>
+                    <div class="text-center p-4">
+                        <a class="d-block h5 mb-2" href="">@book.Name</a>
+                        <span class="text-primary me-1">$@book.Price</span>
+                        <span class="text-body text-decoration-line-through">$29.00</span>
+                    </div>
+                    <div class="d-flex border-top">
+                        <small class="w-50 text-center border-end py-2">
+                            <a class="text-body" asp-controller="Books" asp-action="Details" asp-route-id="@book.Id"><i class="fa fa-eye text-primary me-2"></i>View detail</a>
+                        </small>
+                        <small class="w-50 text-center py-2">
+                            <form asp-controller="Books" asp-action="Apptocart" method="post">
+                                <input type="hidden" name="id" value="@book.Id" />
+                                <input type="hidden" name="name" value="@book.Name" />
+                                <input type="hidden" name="price" value="@book.Price" />
+                                <input type="hidden" name="quantity" value=1 />
+                                <a class="text-body" href=""><i class="fa fa-shopping-bag text-primary me-2"></i>Add to cart</a>
+                            </form>
+                        </small>
+                    </div>
+                </div>
             </div>
-            }
+        }
     </div>
 </div>
 
