--- a/DemoIdentity/Views/Books/Apptocart.cshtml
+++ b/DemoIdentity/Views/Books/Apptocart.cshtml
@@ -5,5 +5,5 @@
 }
 <script language='javascript' type='text/javascript'>
     alert('Adding [@newItem.Title] successful. Quantity= @newItem.Quantity!');
-    window.location.href='/Books';
+    window.location.href='/Home';
 </script>
