--- a/DemoIdentity/Views/Home/Index.cshtml
+++ b/DemoIdentity/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
                                             <input type="hidden" name="id" value="@book.Id" />
                                             <input type="hidden" name="name" value="@book.Name" />
                                             <input type="hidden" name="price" value="@book.Price" />
-                                            <input type="number" name="quantity" value=1 />
+                                            <input type="hidden" name="quantity" value=1 />
                                             <input type="submit" value="Add To Cart" class="btn btn-primary" />
                                         </form>
                                 </small>
