--- a/DemoIdentity/Views/Books/Index.cshtml
+++ b/DemoIdentity/Views/Books/Index.cshtml
@@ -15,6 +15,8 @@
     </br>
     <a asp-controller="PublishingCompanies">PublishingCompanies New</a>
 </p>
+<h1>Books</h1>
+
 <table class="table">
     <thead>
         <tr>
