--- a/DemoIdentity/Views/Home/Index.cshtml
+++ b/DemoIdentity/Views/Home/Index.cshtml
@@ -1,5 +1,6 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
+    Layout = "_Layout_home";
 }
 @model IEnumerable<FPTBook.Models.Book>
 
@@ -13,7 +14,10 @@
             <button class="btn btn-primary" type="submit">SearchTerm</button>
         </div>
     </div>
+
 </form>
+
+
 
 <!-- Product Start -->
 <div class="container-xxl py-5">
