--- a/DemoIdentity/Views/Shared/_Layout_home.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout_home.cshtml
@@ -33,8 +33,8 @@
 
 </head>
 <body>
-    <header> 
-        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 navbar navbar-expand-lg navbar-light bg-light">
+    <header>
+        <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3 navbar navbar-expand-lg navbar-light bg-light fixed-top">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">DemoIdentity</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target=".navbar-collapse" aria-controls="navbarSupportedContent"
@@ -54,11 +54,11 @@
 
                         @if (User.IsInRole("Admin"))
                         {
-                          <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
-                        </li>  
+                            <li class="nav-item">
+                                <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
+                            </li>
                         }
-                      @if (User.IsInRole("Owner"))
+                        @if (User.IsInRole("Owner"))
                         {
                             <li class="nav-item">
                                 <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="Index">Books</a>
@@ -69,7 +69,7 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="CheckOut"><i class="fa-solid fa-cart-shopping"></i></a>
 
-                            </li>
+                        </li>
 
                     </ul>
 
@@ -80,8 +80,52 @@
         </nav>
 
 
-    <!-- Navbar Start -->
- 
+        <!-- Navbar Start -->
+        <!-- Navbar End -->
+        <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
+            <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active">
+                        <img class="w-100" src="~/produc/img/heat.jpg" style="width: 1545px; height: 800px" alt="Image" class="header-image">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-start">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 mb-5 animated slideInDown">Organic Food Is Good For Health</h1>
+                                        <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
+                                        <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <img class="w-100" src="~/produc/img/heat.jpg" style="width: 1545px; height: 800px" alt="Image" class="header-image">
+                        <div class="carousel-caption">
+                            <div class="container">
+                                <div class="row justify-content-start">
+                                    <div class="col-lg-7">
+                                        <h1 class="display-2 mb-5 animated slideInDown">Natural Food Is Always Healthy</h1>
+                                        <a href="" class="btn btn-primary rounded-pill py-sm-3 px-sm-5">Products</a>
+                                        <a href="" class="btn btn-secondary rounded-pill py-sm-3 px-sm-5 ms-3">Services</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#header-carousel"
+                        data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#header-carousel"
+                        data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </div>
     </header>
 
     <div class="container">
@@ -126,8 +170,8 @@
                         <input class="form-control bg-transparent w-100 py-3 ps-4 pe-5" type="text" placeholder="Your email">
                         <button type="button" class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2">SignUp</button>
                     </div>
-   
-              </div>
+
+                </div>
             </div>
         </div>
         <div class="container-fluid copyright">
