--- a/DemoIdentity/Views/Shared/_Layout.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout.cshtml
@@ -57,7 +57,7 @@
                           <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="RoleManager" asp-action="Index">Role Manager</a>
                         </li>  
-                        }
+                        } else{}
                       @if (User.IsInRole("Owner"))
                         {
                             <li class="nav-item">
@@ -65,11 +65,16 @@
                             </li>
 
                         }
+                        else { }
 
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Books" asp-action="CheckOut"><i class="fa-solid fa-cart-shopping"></i></a>
 
                             </li>
+
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
+                        </li>
 
                     </ul>
 
