--- a/DemoIdentity/Views/Shared/_Layout_home.cshtml
+++ b/DemoIdentity/Views/Shared/_Layout_home.cshtml
@@ -71,6 +71,10 @@
 
                         </li>
 
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Orders" asp-action="Index">Orders</a>
+                        </li>
+
                     </ul>
 
                     <partial name="_LoginPartial" />
