--- a/DemoIdentity/Views/Orders/Delete.cshtml
+++ b/DemoIdentity/Views/Orders/Delete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model FPTBook.Models.Order
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Delete";
 }
 
-<h1>Details</h1>
+<h1>Delete</h1>
 
+<h3>Are you sure you want to delete this?</h3>
 <div>
     <h4>Order</h4>
     <hr />
@@ -35,8 +36,10 @@
             @Html.DisplayFor(model => model.State)
         </dd>
     </dl>
-</div>
-<div>
     
-    <a asp-action="Index">Back to List</a>
+    <form asp-action="Delete">
+        <input type="hidden" asp-for="Id" />
+        <input type="submit" value="Delete" class="btn btn-danger" /> |
+        <a asp-action="Index">Back to List</a>
+    </form>
 </div>
