--- a/DemoIdentity/Views/UserRoles/Index.cshtml
+++ b/DemoIdentity/Views/UserRoles/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using FPTBookStore.Models
-@model List<FPTBookStore.Models.UserRolesViewModel>
+﻿@using FPTBook.Models
+@model List<FPTBook.Models.UserRolesViewModel>
 @{
     ViewData["Title"] = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
