--- a/DemoIdentity/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/DemoIdentity/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,4 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@using FPTBookStore.Areas.Identity
-@using FPTBookStore.Areas.Identity.Pages
+@using FPTBook.Areas.Identity
+@using FPTBook.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
