--- a/DemoIdentity/Views/Shared/_LoginPartial.cshtml
+++ b/DemoIdentity/Views/Shared/_LoginPartial.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+﻿@using FPTBook.Models;
+@using Microsoft.AspNetCore.Identity
 @inject SignInManager<ApplicationUser> SignInManager
 @inject UserManager<ApplicationUser> UserManager
 
@@ -34,4 +35,5 @@ else
         <a class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Login">Login</a>
     </li>
 }
+
 </ul>
