--- a/DemoIdentity/Views/_ViewImports.cshtml
+++ b/DemoIdentity/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using FPTBookStore
-@using FPTBookStore.Models
+﻿@using FPTBook
+@using FPTBook.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
